--- a/DateAndTimePickerIOS/src/main/res/layout/bottom_sheet_picker.xml
+++ b/DateAndTimePickerIOS/src/main/res/layout/bottom_sheet_picker.xml
@@ -37,7 +37,7 @@
 
         </FrameLayout>
 
-        <com.android.fajaranugrah.date_and_time_picker_ios.DateAndTimePickerIOS
+        <com.android.fajaranugrah.dateandtimepickerios.DateAndTimePickerIOS
             android:id="@+id/picker"
             android:layout_width="match_parent"
             android:layout_height="230dp"
