--- a/DateAndTimePickerIOS/src/main/res/layout/bottom_sheet_picker_bottom_sheet.xml
+++ b/DateAndTimePickerIOS/src/main/res/layout/bottom_sheet_picker_bottom_sheet.xml
@@ -51,7 +51,7 @@
 
         </FrameLayout>
 
-        <com.android.fajaranugrah.date_and_time_picker_ios.DateAndTimePickerIOS
+        <com.android.fajaranugrah.dateandtimepickerios.DateAndTimePickerIOS
             android:id="@+id/picker"
             android:layout_width="match_parent"
             android:layout_height="230dp"
